# kittysay

./: .editorconfig  .gitignore  .release-please-manifest.json  COPYING.md  Cargo.toml  LICENSE  README.md  changelogithub.config.json  default.nix  flake.nix  release-please-config.json  renovate.json  shell.nix
.github/workflows/: build.yml  check.yml  clippy.yml  release.yml
crates/kittycore/: CHANGELOG.md  Cargo.toml
crates/kittycore/src/: lib.rs
crates/kittysay/: CHANGELOG.md  Cargo.toml  build.rs
crates/kittysay/src/: main.rs
crates/kittysay/tests/: cmd.rs
scripts/: build.sh
src/: lib.rs  main.rs
