[package]
name = "kittysay"
version = "0.6.0"
authors = ["uncenter <uncenter@uncenter.dev>"]
license = "MIT"
description = "cowsay, but with a cute kitty :3"
readme = "README.md"
homepage = "https://github.com/uncenter/kittysay"
repository = "https://github.com/uncenter/kittysay"
keywords = ["cli"]
categories = ["command-line-utilities"]
edition = "2021"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
clap-stdin = "0.4.0"
color-eyre = "0.6.3"
crossterm = "0.27.0"
textwrap = "0.16.1"
unicode-width = "0.1.11"

[lints.clippy]
all = "warn"
pedantic = "warn"
