[workspace]
default-members = [
	"crates/kittysay"
]
members = [
    "crates/kittycore",
    "crates/kittysay",
]
resolver = "2"

[workspace.package]
version = "0.8.0"
authors = ["uncenter <uncenter@uncenter.dev>"]
license = "MIT"
description = "cowsay, but with a cute kitty :3"
readme = "README.md"
repository = "https://github.com/uncenter/kittysay"
edition = "2021"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
