[package]
name = "kittycore"
version = "0.1.1"
authors.workspace = true
license.workspace = true
description.workspace = true
readme.workspace = true
repository.workspace = true
homepage = "https://github.com/uncenter/kittysay/tree/main/crates/kittycore"
edition.workspace = true


[dependencies]
textwrap = "0.16.2"
unicode-width = "0.1.12"

[lints]
workspace = true
