[package]
name = "kittysay"
version = "1.1.1"
authors.workspace = true
license.workspace = true
description.workspace = true
readme.workspace = true
repository.workspace = true
homepage = "https://github.com/uncenter/kittysay/tree/main/crates/kittysay"
keywords = ["cli"]
categories = ["command-line-utilities"]
edition.workspace = true


[dependencies]
anstream = "1.0.0"
clap = { version = "4.5.60", features = ["derive"] }
clap-stdin = "0.4.0"
color-eyre = "0.6.5"
crossterm = "0.29.0"
kittycore = { path = "../kittycore", version = "0.1.0" }
owo-colors = "4.3.0"

[lints]
workspace = true

[dev-dependencies]
insta = { version = "1.46.3", features = ["yaml"] }
insta-cmd = "0.6.0"
